<resources>
    <string name="app_name">Open For You</string>
    <string name="switch_face">开启 人脸解锁</string>
    <string name="switch_gravity">开启 重力唤醒</string>
    <string name="general_setting">通用设置</string>
    <string name="pin_setting">设置密码</string>
    <string name="manager_user">用户管理</string>
    <string name="add_user">添加用户</string>
    <string name="user_list">用户列表</string>
    <string name="user_name">用户名</string>
    <string name="about">关于我们</string>
    <string name="licience">使用条款</string>
    <string name="pin_lock">数字锁</string>
    <string name="pin_change">修改密码</string>
    <string name="pin_set">设置密码</string>
    <string name="pin_protect">设置密保</string>
    <string name="version_name">版本</string>
    <string name="version">v1.0.1</string>
    <string name="noti_title">通知</string>
    <string name="noti_text">欢迎回来</string>
    <string name="service_running">正在运行</string>

    <string name="detect">检测人脸...</string>
    <string name="create_user">创建用户....</string>
    <string name="upload_image">上传图片中....</string>
    <string name="identify">验证人脸...</string>

    <string name="create_group">创建用户组....</string>
    <string name="add_user_success">添加用户成功</string>
    <string name="error_add_user">添加用户失败</string>
    <string name="error_dialog">好像出错了...</string>
    <string name="error_camera">摄像头打开失败</string>
    <string name="error_userName">用户名不允许为空</string>
    <string name="error_no_face">未扫描到人脸</string>
    <string name="error_group">创建分组失败</string>
    <string name="error_network">网络出问题了</string>
    <string name="error_too_many_faces">检测到多张人脸</string>
    <string name="error_camera_permission">相机权限请求失败</string>
    <string name="forget_pw">请使用人脸解锁</string>
    <string name="empty_user">未添加用户</string>
    <string name="lock_is_disable">请先添加密码锁</string>
    <string name="lock_set_success">密码设置成功</string>
    <string name="lock_change_success">密码修改成功</string>

    <string name="upload_confirm">确认</string>
    <string name="reCamera">重拍</string>
    <string name="title_activity_lockactivity">Lockactivity</string>
    <string name="permission_limited">权限不足，无法开启服务</string>
    <string name="ask_for_overlay">为保证正常服务，建议关闭系统锁屏并允许应用在其他应用上层显示和锁屏权限</string>
    <string name="admin_label">请求解锁</string>
    <string name="pin_protect_question">密保问题</string>
    <string name="pin_protect_answer">密保答案</string>
    <string name="pin_protect_set_success">密保设置成功</string>
    <string name="pin_protect_empty_error">密保问题不允许为空</string>
    <string name="pin_protect_not_set">您未设置密保</string>
    <string name="pin_protect_check">检查密保</string>
    <string name="pin_protect_input_wrong">密保输入有误</string>
    <string name="should_set_pin_protect">请先设置密保</string>
    <string name="ask_overlay_title">请求权限</string>
    <string name="overlay_fail">悬浮窗权限请求失败</string>
    <string name="pin_code_step_enable_confirm">确认密码</string>
    <string name="pin_code_step_change">验证密码</string>
    <string name="pin_code_step_create">添加密码</string>
    <string name="pin_code_step_unlock">输入密码</string>

    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="pin_code_forgot_text"> </string>
    <string name="delete_user">删除用户</string>
    <string name="delete_user_done">用户已删除</string>
    <string name="delete_user_error">用户删除失败</string>
    <string name="delete_user_doing">正在删除用户...</string>
    <string name="service_start">开启人脸解锁模式</string>
    <string name="service_stop">关闭人脸解锁</string>
    <string name="lock_screen_fail">锁屏权限请求失败</string>
    <string name="cant_change_pin">请先关闭人脸解锁</string>
</resources>
