<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/pin_protect"
            android:textColor="#38ADFF"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:entries="@array/questions"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/pin_protect_answer"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/set_pin_protection_cancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/cancel"
                android:textColor="#7D7D7D"
                android:textSize="16sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#E4E4E4" />

            <Button
                android:id="@+id/set_pin_protection_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/confirm"
                android:textColor="#38ADFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
